--- a/navar-hyper/Cargo.toml
+++ b/navar-hyper/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2024"
 navar = { path = ".." }
 hyper = { version = "1.0", features = ["client", "http1", "http2"] }
 hyper-util = { version = "0.1", features = ["tokio"] }
-tokio = { version = "1", features = ["rt"] } # Potrzebne do spawnowania połączenia
+tokio = { version = "1", features = ["rt"] }
 tokio-util = { version = "0.7", features = ["compat"] }
 anyhow = "1.0"
