--- a/navar-example/Cargo.toml
+++ b/navar-example/Cargo.toml
@@ -7,11 +7,13 @@ publish = false
 [dependencies]
 navar = {path = ".."}
 navar-tokio = {path = "../navar-tokio", features = ["tls"]}
+navar-iroh = {path = "../navar-iroh"}
 navar-hyper = {path = "../navar-hyper"}
-tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
+tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros", "io-util"] }
 axum = { version = "0.8.8", features = ["http2"] }
 tokio-rustls = "0.26.4"
 rustls = "0.23.36"
 rustls-pemfile = "2.2.0"
 rcgen = "0.14.6"
 hyper-util = "0.1.19"
+iroh = "0.95.1"
