--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["navar-hyper", "navar-iroh", "navar-tokio"]
+members = ["navar-h3","navar-hyper", "navar-iroh", "navar-tokio"]
 
 [package]
 name = "navar"
@@ -19,6 +19,8 @@ http-body-util = "0.1.3"
 navar-tokio = {path = "./navar-tokio", features = ["tls"]}
 navar-iroh = {path = "./navar-iroh"}
 navar-hyper = {path = "./navar-hyper"}
+navar-h3 = {path = "./navar-h3"}
+iroh-h3-axum = "0.1.0"
 tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros", "io-util"] }
 axum = { version = "0.8.8", features = ["http2"] }
 tokio-rustls = "0.26.4"
