--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,4 @@ rustls-pemfile = "2.2.0"
 rcgen = "0.14.6"
 hyper-util = "0.1.19"
 iroh = "0.95.1"
+clap = { version = "4.5.54", features = ["derive"] }
