--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,9 @@ default = ["json"]
 json = ["dep:serde", "dep:serde_json"]
 
 [dependencies]
-anyhow = "1.0.100"
+anyhow = "1.0"
 bytes = "1.11"
+dashmap = "6.1"
 futures-lite = "2.6"
 http = "1.4"
 http-body = "1.0"
