--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["navar-h3", "navar-hyper", "navar-iroh", "navar-tokio"]
+members = ["navar-h3", "navar-hyper", "navar-iroh", "navar-mocks", "navar-tokio"]
 
 [package]
 name = "navar"
@@ -21,12 +21,14 @@ http-body = "1.0"
 http-body-util = "0.1.3"
 serde = { version = "1.0", optional = true }
 serde_json = { version = "1.0", optional = true }
+tracing = "0.1.44"
 
 [dev-dependencies]
 navar-tokio = { path = "./navar-tokio", features = ["tls"] }
 navar-iroh = { path = "./navar-iroh" }
 navar-hyper = { path = "./navar-hyper" }
 navar-h3 = { path = "./navar-h3" }
+navar-mocks = { path = "./navar-mocks" }
 iroh-h3-axum = "0.1.0"
 tokio = { version = "1.49.0", features = [
     "rt",
